try fix mobile menu on safari

--- a/frontend/components/Header/Header.module.css
+++ b/frontend/components/Header/Header.module.css
@@ -34,7 +34,10 @@
 
 .backdrop {
     position: fixed;
-    inset: 0;
+    top: env(safe-area-inset-top);
+    left: 0;
+    right: 0;
+    bottom: env(safe-area-inset-bottom);
     background: rgba(0, 0, 0, 0.5);
     z-index: 10;
 }
